--- a/PendulumPoncelet/PendulumPoncelet.tex
+++ b/PendulumPoncelet/PendulumPoncelet.tex
@@ -111,7 +111,7 @@ We can better relate the proof of Poncelet's Porism to revolving pendulums by re
 
 %It's easy to describe such a motion when ${\cal C}_1$ is a point $A$. Then Poncelet's Porism is trivial (each path closes with two segments) and a motion that rotates about $A$ at a constant rate traverses the arcs subtended by the chords through $A$ in half the period. 
 
-To describe equal-time motions, consider first the special case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial (each path closes with two segments). One choice for an equal-time motion is one that rotates about $A$ at a constant rate.  But there are others, and one of these has a speed function that is easier to describe than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
+To describe equal-time motions, consider first the special case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial (each path closes with two segments). One choice for an equal-time motion is one that rotates about $A$ at a constant rate.  But there are others, and one of these has a speed function that is simpler than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
 
 
 Because the equal-time condition relates only the times to traverse arcs subtended by chords through $A$, we have the freedom to arbitrarily define the speed of the motion on either of the two arcs subtended by a particular such chord. This choice, assumed to be continuous, determines the speed along the other arc. The motion there is traced by the other end of the chord $\overline{PP^\prime}$ through $A$ as $P$ follows its arbitrarily defined motion along the chosen arc. This is because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
@@ -123,7 +123,7 @@ Because the equal-time condition relates only the times to traverse arcs subtend
 %along the semicircle to the right of the vertical diameter $ED$. To extend this to an equal-time motion around the circle, imagine $P$ moving along the semicircle with this motion and let $\overline{PP^\prime}$ be the chord through $A$. Then $P^\prime$ moves with the other half of the equal-time motion. This is simply because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
 
 
-To complete the description of these equal-time motions and to understand what we mean by the ``simplest'' such speed function, we need to relate the speeds of $P$ and $P^\prime$ to the rotation rate of $\overline{PP^\prime}$. For this, let $ds$ and $ds^\prime$ be the differential arclengths  traced respectively by $P$ and $P^\prime$ as $\overline{PP^\prime}$ turns through the angle $d\phi$. From the expression for arclength in polar coordinates,  
+To complete the description of these equal-time motions and to understand what we mean by the ``simplest'' such speed function, we should relate the speeds of $P$ and $P^\prime$ to the rotation rate of $\overline{PP^\prime}$. For this, let $ds$ and $ds^\prime$ be the differential arclengths  traced respectively by $P$ and $P^\prime$ as $\overline{PP^\prime}$ turns through the angle $d\phi$. From the expression for arclength in polar coordinates,  
 \begin{equation}
    ds =  \sqrt{(\rho \, d\phi)^2 + d\rho^2}   =   (\rho \, d\phi) \csc \alpha ,   \label{Eq:ArcLength}
 \end{equation}
@@ -142,14 +142,11 @@ Similarly, because $\overline{AP^\prime}$ cuts ${\cal C}_1$ at the same angle $\
 where $\rho^\prime = AP^\prime$.
 
 
-
-\[
-   \frac{ds}{v_P} = \frac{ds^\prime}{v_{P^\prime}}
-\] 
-and
+So
 \begin{equation}
-    \frac{\rho}{v_P} = \frac{\rho^\prime}{v_{P^\prime}} .  \label{Eq:SpeedCondition}
+    \frac{v_P}{\rho} = \frac{v_{P^\prime}}{\rho^\prime} .  \label{Eq:SpeedCondition}
 \end{equation}
+
 So if 
 \[
   v_P = f(\phi) \, , 0\leq \phi \leq \pi , 
