--- a/PendulumPoncelet/PendulumPoncelet.tex
+++ b/PendulumPoncelet/PendulumPoncelet.tex
@@ -13,7 +13,7 @@ We investigate the families of \emph{isochronous chords} of a pendulum motion. T
 
 %Think of a simple pendulum, and you might picture a mass oscillating at the end of a string. But imagine instead a mass attached to a weightless rod or a small bead that slides around a circluar wire, either launched with sufficient speed to repeatedly revolve around its circular path. Now construct chords around the circular path of this revolving pendulum that bisect the period in the sense that the pendulum traveses the two arcs subtended by each chord in equal times. One such chord is the vertical diameter. Another is horizontal, but where? And what can we say about the other bisecting chords?
 
-Think of a simple pendulum and you might picture a mass oscillating at the end of a string. But imagine instead a mass attached to a weightless rod launched from its low point with sufficient speed to repeatedly revolve around its circular path. Now construct chords around the path of this revolving pendulum that bisect the period - the pendulum should traverse the arcs subtended by each chord in half the period. One such chord is the vertical diameter. Another is horizontal. But what can we say about the other bisecting chords?
+Think of a simple pendulum and you probably picture a mass oscillating at the end of a string. But imagine instead a mass attached to a weightless rod launched from its low point with sufficient speed to repeatedly revolve around its circular path. Now construct chords around the path of this revolving pendulum that bisect the period - the pendulum should traverse the arcs subtended by each chord in half the period. One such chord is the vertical diameter. Another is horizontal. But what can we say about the other bisecting chords?
 
 Suppose, as in the exploration below, we are given the horizontal chord that bisects the period. How can we draw other bisecting chords?
 
@@ -30,11 +30,6 @@ The horizontal chord below bisects the period of a revolving pendulum. How can w
 
 \end{exploration}
 
-%But there are also revolving pendulums. Imagine instead a mass attached to a weightless rod or a small bead that slides around a circluar wire, either launched with sufficient speed to repeatedly revolve around its circular path. 
-
-%Now construct chords of the circular path that bisect the period so that the pendulum traverses the two arcs subtended by each chord in equal times. One such chord is the vertical diameter. Another chord is horizontal, but where? And what can we say about the other bisecting chords.
-
-%Or how can we draw other families of \emph{isochronous chords}, where the chords subtend arcs traversed in equal times  And what can we say about the curve these chords envelope?
 
 More generally, how can we draw other families of \emph{isochronous chords}, where the pendulum swings through the quicker arc subtended by the chords in some fixed fraction of the period?  And what can we say about the curve these chords might envelope?
 
@@ -105,13 +100,9 @@ In the example below, each chord subtends $2/5$ of the circumference in the new 
 
 We can better relate the proof of Poncelet's Porism to revolving pendulums by replacing the distance metric around ${\cal C}_1$ with a time metric. So imagine instead a motion around ${\cal C}_1$ that traverses the quicker arcs subtended by the tangent chords in equal times. A priori, it's not clear such an \emph{equal-time} motion exits, but if so, we would have a proof of Poncelet's Porism. Supposing a period of one second, every path would form a $\{p/q \}$ star polygon for a motion that takes $\lambda = p/q$ seconds to traverse each quicker (or slower) arc. And paths with irrational $\lambda$ would never close. 
 
- %Then every path, for example, would close with three segments for a motion that takes $1/3$ the period to traverse each arc. %If for example, the motion takes $1/3$ the period to tranverse each arc, then each path would close with three segments.
+%Figure ?? below is the key to describing the equal-time motions. Imagine a tangent chord $\overline{PP^\prime}$ rotating through the differential angle $d\phi$ as $P$ and $P^\prime$ traverse the respective arclengths $ds$, $ds^\prime$. These are the ones that traverse the differ
 
-%It's easy to describe such a motion when ${\cal C}_1$ is a point $A$. Then Poncelet's Porism is trivial (each path closes with two segments) and a motion that rotates about $A$ at a constant rate traverses the arcs subtended by the chords through $A$ in half the period. But there are other equal-time motions when ${\cal C}_1$ is a point, one of which is easier to describe algebraically than all the others. 
-
-%It's easy to describe such a motion when ${\cal C}_1$ is a point $A$. Then Poncelet's Porism is trivial (each path closes with two segments) and a motion that rotates about $A$ at a constant rate traverses the arcs subtended by the chords through $A$ in half the period. 
-
-To describe equal-time motions, consider first the special case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial (each path closes with two segments). One choice for an equal-time motion is one that rotates about $A$ at a constant rate.  But there are others, and one of these has a speed function that is simpler than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
+To describe equal-time motions, consider first the degenerate case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial (each path closes with two segments). One choice for an equal-time motion is a motion that rotates about $A$ at a constant rate.  But there are many more. %others, and one of these has a speed function that is simpler than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
 
 
 Because the equal-time condition relates only the times to traverse arcs subtended by chords through $A$, we have the freedom to arbitrarily define the speed of the motion on either of the two arcs subtended by a particular such chord. This choice, assumed to be continuous, determines the speed along the other arc. The motion there is traced by the other end of the chord $\overline{PP^\prime}$ through $A$ as $P$ follows its arbitrarily defined motion along the chosen arc. This is because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
@@ -123,7 +114,7 @@ Because the equal-time condition relates only the times to traverse arcs subtend
 %along the semicircle to the right of the vertical diameter $ED$. To extend this to an equal-time motion around the circle, imagine $P$ moving along the semicircle with this motion and let $\overline{PP^\prime}$ be the chord through $A$. Then $P^\prime$ moves with the other half of the equal-time motion. This is simply because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
 
 
-To complete the description of these equal-time motions and to understand what we mean by the ``simplest'' such speed function, we should relate the speeds of $P$ and $P^\prime$ to the rotation rate of $\overline{PP^\prime}$. For this, let $ds$ and $ds^\prime$ be the differential arclengths  traced respectively by $P$ and $P^\prime$ as $\overline{PP^\prime}$ turns through the angle $d\phi$. From the expression for arclength in polar coordinates,  
+To describe the speed functions, we'll relate the speeds of $P$ and $P^\prime$ to the rotation rate of $\overline{PP^\prime}$. For this, let $ds$ and $ds^\prime$ be the differential arclengths  traced respectively by $P$ and $P^\prime$ as $\overline{PP^\prime}$ turns through the angle $d\phi$. From the expression for arclength in polar coordinates,  
 \begin{equation}
    ds =  \sqrt{(\rho \, d\phi)^2 + d\rho^2}   =   (\rho \, d\phi) \csc \alpha ,   \label{Eq:ArcLength}
 \end{equation}
@@ -161,18 +152,22 @@ is an arbitrary but continuous speed function around the right arc of the vertic
 \]
 describes an equal-time motion. %Here $\phi = \angle CAP$.
 
-To make this motion continuous at $\phi=0$ and $\phi= \pi$, we should be sure that $P^\prime$ leaves $D$ (when $\phi=0$) at the same speed at which $P$ arrives at $D$ (when $\phi = \pi$). That is, we should choose $f$ so that 
+To make this motion continuous at $\phi=0$ and $\phi= \pi$, we should make sure $P$ arrives at $D$ (when $\phi = \pi$) at the same speed at whic $P^\prime$ leaves $D$ (when $\phi=0$).  That is, we should choose $f$ so that 
 \[
    f(\pi) =  \frac{\rho(\pi)}{\rho(0)} f(0) .
 \]
 
 %Equivalently, any continuous equal-time motion is of the form
 
+\iffalse
+**********************************************************************
 We can also express an equal-time motion in the form
 \[
       v_P = v(\phi) = \omega_0 \rho (\phi) h(\phi) ,
 \]
 for some some constant $\omega_0$ with units rad/sec and some contiuous scaling function $h$ with period $\pi$. Requiring $h(0)=1$, we can interpret $\omega_0$ as the rotation rate of chord $\overline{PP^\prime}$ when it is the vertical diameter throuhg $A$.
+
+\fi
 
 Taking $h(\phi) = \csc \alpha$ gives the motion that rotates about $A$ at the constant rate of $\omega_0$ rad/sec. But a simpler choice would have been to take $h(\phi)=1$ to get the equal-time motion                  %what we'll call the \emph{pendulum} constant-time motion
 \begin{equation}
