--- a/PendulumPoncelet/PendulumPoncelet.tex
+++ b/PendulumPoncelet/PendulumPoncelet.tex
@@ -102,10 +102,10 @@ We can better relate the proof of Poncelet's Porism to revolving pendulums by re
 
 %Figure ?? below is the key to describing the equal-time motions. Imagine a tangent chord $\overline{PP^\prime}$ rotating through the differential angle $d\phi$ as $P$ and $P^\prime$ traverse the respective arclengths $ds$, $ds^\prime$. These are the ones that traverse the differ
 
-To describe the equal-time motions, consider first the degenerate case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial (each path closes with two segments). One choice for an equal-time motion is a motion that rotates about $A$ at a constant rate.  But there are many more. %others, and one of these has a speed function that is simpler than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
+To describe the equal-time motions, consider first the degenerate case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial. One choice for an equal-time motion is a motion that rotates about $A$ at a constant rate.  But there are many more. %others, and one of these has a speed function that is simpler than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
 
 
-Because the equal-time condition relates only the times to traverse arcs subtended by chords through $A$, we have the freedom to arbitrarily define the speed of the motion on either of the two arcs subtended by a particular such chord. This choice, assumed to be continuous, determines the speed along the other arc. The motion there is traced by the other end of the chord $\overline{PP^\prime}$ through $A$ as $P$ follows its arbitrarily defined motion along the chosen arc. This is because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
+Because the equal-time condition relates only the times to traverse arcs subtended by chords through $A$, we have the freedom to arbitrarily define the speed of the motion on either of the two arcs subtended by one such chord. This choice, assumed to be continuous, determines the speed along the other arc. The motion there is traced by the other end of the chord $\overline{PP^\prime}$ through $A$ as $P$ follows its arbitrarily defined motion along the chosen arc. This is because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
 
 %Suppose for example, we choose a continous motion 
 %\[
@@ -114,7 +114,7 @@ Because the equal-time condition relates only the times to traverse arcs subtend
 %along the semicircle to the right of the vertical diameter $ED$. To extend this to an equal-time motion around the circle, imagine $P$ moving along the semicircle with this motion and let $\overline{PP^\prime}$ be the chord through $A$. Then $P^\prime$ moves with the other half of the equal-time motion. This is simply because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
 
 
-To describe the speed functions, we'll relate the speeds of $P$ and $P^\prime$ to the rotation rate of $\overline{PP^\prime}$. For this, let $ds$ and $ds^\prime$ be the differential arclengths  traced respectively by $P$ and $P^\prime$ as $\overline{PP^\prime}$ turns through the angle $d\phi$. From the expression for arclength in polar coordinates,  
+To describe a speed function, we relate the speeds of $P$ and $P^\prime$ to the rotation rate of $\overline{PP^\prime}$. For this, let $ds$ and $ds^\prime$ be the differential arclengths  traced respectively by $P$ and $P^\prime$ as $\overline{PP^\prime}$ turns through the angle $d\phi$. From the expression for arclength in polar coordinates,  
 \begin{equation}
    ds =  \sqrt{(\rho \, d\phi)^2 + d\rho^2}   =   (\rho \, d\phi) \csc \alpha ,   \label{Eq:ArcLength}
 \end{equation}
@@ -126,7 +126,7 @@ Dividing both sides by the differential time (in seconds) it takes $\overline{PP
 \end{equation}
 where $\omega  = d\phi/dt$ is the rotation rate (not necessarily constant) of $\overline{PP^\prime}$.
 
-Similarly, because $\overline{AP^\prime}$ cuts ${\cal C}_1$ at the same angle $\alpha$ and \emph{takes the same time to traverse the arclength $ds^\prime$ as $P$ takes to traverse the arclength $ds$}, $P^\prime$ has speed
+Similarly, because $\overline{AP^\prime}$ cuts ${\cal C}_1$ at the same angle $\alpha$ and \emph{$P^\prime$, $P^\prime$ take the same time to traverse their respective arclengths}, $P^\prime$ has speed
 \begin{equation}
    v_{P^\prime} =   \omega \rho^\prime  \csc \alpha ,  \label{Eq:ArcLength2}
 \end{equation}
@@ -165,13 +165,14 @@ with period $\pi$, determines the speed function
 \[
     v_P = \omega \rho \csc\alpha
 \]
-for an equal-time motion.
+of an equal-time motion.
 
-An obvious choice is to make the rotation rate constant, but choosing $\omega = \omega_0 \sin\alpha$ for some constant $\omega_0$ (with units rad/sec), gives a simpler speed function. If we suppose ${\cal C}_1$ has radius $R$, $A$ has coordinates $(0,a)$, and $\theta = \angle DOP$ in the animation below, then 
+We could choose a constant rotation rate, but letting $\omega_0$ be the rotation rate when $\overline{PP^\prime}$ is vertical and defining $\omega = \omega_0 \sin\alpha$ gives a simpler speed function. If we suppose ${\cal C}_1$ has radius $R$, $A$ has coordinates $(0,a)$, and $\theta = \angle DOP$ in the figure below, then $P$ has speed
 \begin{align*}
    v_P &= \omega_0 \rho \\
           &= \omega_0  \sqrt{R^2 + a^2 + 2aR\cos\theta} .
 \end{align*}
+
 
 \begin{exploration}
 The animation below shows an equal-time motion (\ref{Eq:PendulumMotion}) with speed proportional to $\rho$.
@@ -191,7 +192,7 @@ We can also express an equal-time motion in the form
 \[
       v_P = v(\phi) = \omega_0 \rho (\phi) h(\phi) ,
 \]
-for some some constant $\omega_0$ with units rad/sec and some contiuous scaling function $h$ with period $\pi$. Requiring $h(0)=1$, we can interpret $\omega_0$ as the rotation rate of chord $\overline{PP^\prime}$ when it is the vertical diameter throuhg $A$.
+for some some constant $\omega_0$ with units rad/sec and some contiuous scaling function $h$ with period $\pi$. Requiring $h(0)=1$, we can interpret $\omega_0$ as the rotation rate of chord $\overline{PP^\prime}$ when it is the vertical diameter through $A$.
 
 \fi
 
