--- a/PendulumPoncelet/PendulumPoncelet.tex
+++ b/PendulumPoncelet/PendulumPoncelet.tex
@@ -102,7 +102,7 @@ We can better relate the proof of Poncelet's Porism to revolving pendulums by re
 
 %Figure ?? below is the key to describing the equal-time motions. Imagine a tangent chord $\overline{PP^\prime}$ rotating through the differential angle $d\phi$ as $P$ and $P^\prime$ traverse the respective arclengths $ds$, $ds^\prime$. These are the ones that traverse the differ
 
-To describe the equal-time motions, consider first the degenerate case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial. One choice for an equal-time motion is a motion that rotates about $A$ at a constant rate.  But there are many more. %others, and one of these has a speed function that is simpler than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
+To describe the equal-time motions, consider first the degenerate case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial. One choice for an equal-time motion is a motion that rotates about $A$ at a constant rate.  But there are many others. %others, and one of these has a speed function that is simpler than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
 
 
 Because the equal-time condition relates only the times to traverse arcs subtended by chords through $A$, we have the freedom to arbitrarily define the speed of the motion on either of the two arcs subtended by one such chord. This choice, assumed to be continuous, determines the speed along the other arc. The motion there is traced by the other end of the chord $\overline{PP^\prime}$ through $A$ as $P$ follows its arbitrarily defined motion along the chosen arc. This is because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
@@ -133,12 +133,12 @@ Similarly, because $\overline{AP^\prime}$ cuts ${\cal C}_1$ at the same angle $\
 where $\rho^\prime = AP^\prime$.
 
 
-So
+Thus,
 \begin{equation}
     \frac{v_P}{\rho} = \frac{v_{P^\prime}}{\rho^\prime} .  \label{Eq:SpeedCondition}
 \end{equation}
 
-Thus, if 
+So if 
 \[
   v_P = f(\phi) \, , 0\leq \phi \leq \pi , 
 \]
@@ -157,21 +157,28 @@ To make this motion continuous at $\phi=0$ and $\phi= \pi$, we should make sure 
    f(\pi) =  \frac{\rho(\pi)}{\rho(0)} f(0) .
 \]
 
-Put another way, when ${\cal C}_1$ is a point, an arbitrary choice of a positive, continous function
+Equivalently, when ${\cal C}_1$ is a point we could choose an arbitrary positive, continous function
 \[
      \omega = g(\phi), 0 \leq \phi \leq 2\phi ,
 \]
-with period $\pi$, determines the speed function
+with period $\pi$ for the rotation rate of $PP^\prime$. Then the speed function
 \[
     v_P = \omega \rho \csc\alpha
 \]
-of an equal-time motion.
+describes an equal-time motion.
 
-We could choose a constant rotation rate, but letting $\omega_0$ be the rotation rate when $\overline{PP^\prime}$ is vertical and defining $\omega = \omega_0 \sin\alpha$ gives a simpler speed function. If we suppose ${\cal C}_1$ has radius $R$, $A$ has coordinates $(0,a)$, and $\theta = \angle DOP$ in the figure below, then $P$ has speed
+Letting $\omega_0$ be the rotation rate when $\overline{PP^\prime}$ is vertical and defining $\omega = \omega_0 \sin\alpha$ gives a simpler speed function than a constant rotation rate. If ${\cal C}_1$ has radius $R$, $A$ has coordinates $(0,a)$, and $\theta = \angle EOP$ in the figure below, then $P$ has speed
 \begin{align*}
    v_P &= \omega_0 \rho \\
           &= \omega_0  \sqrt{R^2 + a^2 + 2aR\cos\theta} .
 \end{align*}
+
+
+\begin{onlineOnly}
+    \begin{center}
+\geogebra{wenuyqer}{450}{600}  
+\end{center}
+\end{onlineOnly}
 
 
 \begin{exploration}
