--- a/PendulumPoncelet/PendulumPoncelet.tex
+++ b/PendulumPoncelet/PendulumPoncelet.tex
@@ -174,9 +174,9 @@ gives a simpler speed function than does a constant rotation rate. If ${\cal C}_
           &= \omega_0  \sqrt{R^2 + a^2 + 2aR\cos\theta} 
 \end{align*}
 and $\overline{PP^\prime}$ rotation rate
-\[
-   \omega = \omega_0 \sin\alpha = \left( \frac{\omega_0}{2R} \right) PP^\prime
-\]
+\begin{equation}
+   \omega = \omega_0 \sin\alpha = \left( \frac{\omega_0}{2R} \right) PP^\prime  \label{Eq:PendulumMotion}
+\end{equation}
 proportional to $PP^\prime$.
 
 \begin{onlineOnly}
