--- a/PendulumPoncelet/PendulumPoncelet.tex
+++ b/PendulumPoncelet/PendulumPoncelet.tex
@@ -181,7 +181,7 @@ proportional to $PP^\prime$.
 
 \begin{onlineOnly}
     \begin{center}
-\geogebra{wenuyqer}{450}{600}  
+\geogebra{wenuyqer}{600}{450}  
 \end{center}
 \end{onlineOnly}
 
@@ -234,7 +234,7 @@ where $\omega  = d\phi/dt$ is the rotation rate (not necessarily constant) of $\
 
 
 \begin{exploration}
-The animation below shows two equal-time motions, one with speed proportional to $\rho$ and rotation rate proportional to $PP^\prime$ (\ref{Eq:PendulumMotion}), the other with a constant rotation rate (\ref{Eq:ConstantRate}). 
+The animation below shows two equal-time motions, one with speed proportional to $\rho$ (and rotation rate proportional to $PP^\prime$ (\ref{Eq:PendulumMotion})), the other with a constant rotation rate (\ref{Eq:ConstantRate}). 
 \begin{onlineOnly}
     \begin{center}
 \desmos{xifdeg3wsq}{450}{600}  
