--- a/PendulumPoncelet/PendulumPoncelet.tex
+++ b/PendulumPoncelet/PendulumPoncelet.tex
@@ -271,13 +271,13 @@ in equal times.
 for all chords $\overline{PP^\prime}$ tangent to ${\cal C}_1$.
 
 
-%As chord $\overline{PP^\prime}$ tangent to ${\cal C}_2$ at $B$ turns through the angle $d\phi$, its endpoints $P$ and $P^\prime$ traverse their respective arclengths (\ref{Eq:ArcLength}) and (\ref{Eq:ArcLength2})
-%\[
-%     ds = \rho \csc \alpha \, d\phi \,\,\,\,\, \text{ and } \,\,\,\, ds^\prime = \rho^\prime \csc \alpha \, d\phi,
-%\]
-%where $\rho = BP$ amd $\rho^\prime =  BP^\prime$.
+\begin{onlineOnly}
+    \begin{center}
+\geogebra{tq8p8jk5}{600}{450}  
+\end{center}
+\end{onlineOnly}
 
-%(b) A motion is equal-time if and only if $P$ and $P^\prime$ a traverse these arclengths in equal times or equivalently that their speeds are proportional to the distances $\rho = BP$ and $\rho^\prime = BP^\prime$. %a necessary and sufficient condition for a motion to be equal-time is that $P$ and $P^\prime$ traverse these arclengths in equal times.
+
 
 \begin{onlineOnly}
     \begin{center}
