--- a/PendulumPoncelet/PendulumPoncelet2.tex
+++ b/PendulumPoncelet/PendulumPoncelet2.tex
@@ -102,6 +102,9 @@ We can better relate the proof of Poncelet's Porism to revolving pendulums by re
 
 %Figure ?? below is the key to describing the equal-time motions. Imagine a tangent chord $\overline{PP^\prime}$ rotating through the differential angle $d\phi$ as $P$ and $P^\prime$ traverse the respective arclengths $ds$, $ds^\prime$. These are the ones that traverse the differ
 
+To describe the equal-time motions, imagine a tangent chord $PP^\prime$ rolling counter-clockwise around ${\cal C}_2$.
+
+
 To describe the equal-time motions, consider first the degenerate case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial. One choice for an equal-time motion is a motion that rotates about $A$ at a constant rate.  But there are many others. %others, and one of these has a speed function that is simpler than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
 
 
