--- a/PendulumPoncelet/PendulumPoncelet2.tex
+++ b/PendulumPoncelet/PendulumPoncelet2.tex
@@ -102,7 +102,7 @@ We can better relate the proof of Poncelet's Porism to revolving pendulums by re
 
 %Figure ?? below is the key to describing the equal-time motions. Imagine a tangent chord $\overline{PP^\prime}$ rotating through the differential angle $d\phi$ as $P$ and $P^\prime$ traverse the respective arclengths $ds$, $ds^\prime$. These are the ones that traverse the differ
 
-To describe an equal-time motion, we'll find function $v_P = f(\theta)$ that expresses the speed of the motion at the point $P$ of ${\cal C}_1$ with
+To describe an equal-time motion, we need to find a function $v_P = f(\theta)$ that expresses the speed of the motion at the point $P$ of ${\cal C}_1$ in terms of the central angle $\theta = \angle EOP$ as illustrated in the figure below.
 
 \begin{onlineOnly}
     \begin{center}
@@ -110,8 +110,10 @@ To describe an equal-time motion, we'll find function $v_P = f(\theta)$ that exp
 \end{center}
 \end{onlineOnly}
 
-
- imagine a tangent chord $PP^\prime$ rolling counter-clockwise around ${\cal C}_2$.
+Now imagine tangent chord $\overline{PP^\prime}$ rolling counter-clockwise around ${\cal C}_2$ as $P$, $P^\prime$ follow an equal-time motion. Let $ds$, $ds^\prime$ be the arclengths traversed by $P$, $P^\prime$ as $\overline{PP^\prime}$ turns through the differential angle $d\phi$. Then $P$, $P^\prime$ traverse these arclengths in equal times and 
+\[
+  \frac{ds}{v_P} = \frac{ds^\prime}{v_{P^\prime}}.
+\]
 
 
 To describe the equal-time motions, consider first the degenerate case when ${\cal C}_1$ is a point $A$ and Poncelet's Porism is trivial. One choice for an equal-time motion is a motion that rotates about $A$ at a constant rate.  But there are many others. %others, and one of these has a speed function that is simpler than all the others. %But there are many others. %Indeed we have almost have almost complete freedom in defining an equal-time motion by choosing a function $\omega = f(\phi)$, $0\leq \phi \leq \pi$
