--- a/PendulumPoncelet/PendulumPoncelet2.tex
+++ b/PendulumPoncelet/PendulumPoncelet2.tex
@@ -110,7 +110,7 @@ To describe an equal-time motion, we'll find a function $v_P = f(\theta)$ that e
 \end{center}
 \end{onlineOnly}
 
-The key observation is that the speed of an equal-time motion at a point $P$ determines the speeds of the motion at the endpoints of the two tangent chords through $P$. By subtraction, an equal-time motion sweeps out the  differential arclengths $ds$, $ds^\prime$ traversed by the endpoints $P$ and $P^\prime$ of the (counterclockwise) tangent chord $\overline{PP^\prime}$ as it turns through the differential angle $d\phi$ in equal times.   So the condition that %a necessary condition for an equal-time motion is that
+The key observation is that the speed of an equal-time motion at a point $P$ determines the speeds of the motion at the endpoints of the two tangent chords through $P$. By subtraction, the motion sweeps out the differential arclengths $ds$, $ds^\prime$ traversed by the endpoints $P$ and $P^\prime$ of the (counterclockwise) tangent chord $\overline{PP^\prime}$ as it turns through the differential angle $d\phi$ in equal times.   So the condition that %a necessary condition for an equal-time motion is that
 %Now imagine tangent chord $\overline{PP^\prime}$ rolling counter-clockwise around ${\cal C}_2$ as $P$, $P^\prime$ follow an equal-time motion. Let $ds$, $ds^\prime$ be the respective arclengths traversed by $P$ and $P^\prime$ as $\overline{PP^\prime}$ turns through the differential angle $d\phi$. Then since $P$ and $P^\prime$ traverse these arclengths in equal times,
 \begin{equation}
   \frac{ds}{v_P} = \frac{ds^\prime}{v_{P^\prime}}.   \label{Eq:EqualTime5}
@@ -127,7 +127,7 @@ So
 \]
 where $\alpha$ is the acute angle $\overline{PP^\prime}$ makes with ${\cal C}_1$.
 
-This tells us two things. First that $P$ has speed
+This tells us two things. First, that $P$ has speed
 \[
    v_P = \frac{ds}{dt} = \omega \rho \csc\alpha ,
 \]
@@ -136,9 +136,9 @@ where $\omega = d\phi/dt$ is the rotation rate of $\overline{PP^\prime}$. And se
     \frac{v_P}{\rho} = \frac{v_{P^\prime}}{\rho^\prime} .
 \]
 
-For example, in the degenerate case when ${\cal C}_1$ is a point $A$, we have the freedom to arbitrarily define the speed on either of the two arcs subtended by a chord through $A$. This choice, assumed to be continuous, determines the speed along the other arc. Or we could arbitrarily choose a positive, continuous function $\omega  = g(\theta)$, $0\leq \theta \leq pi$, that gives the rotation rate of $\overline{PP^\prime}$.
+For example, in the degenerate case when ${\cal C}_1$ is a point $A$, we have the freedom to arbitrarily define the speed on either of the two arcs subtended by a chord through $A$. This choice, assumed to be continuous, determines the speed along the other arc. Or we could arbitrarily choose a positive, continuous function $\omega  = g(\theta)$, $0\leq \theta \leq \pi$ with $g(\pi) = g(0)$, for the rotation rate of $\overline{PP^\prime}$.
 
-One choice would be to assume $\overline{PP^\prime}$ rotates about $A$ at a constant rate. But choosing $\omega = \omega_0 \sin \alpha$ (where $\omega_0$ is the rotation rate when $\overline{PP^\prime}$ is the diameter through $A$) gives a simpler speed function. If ${\cal C}_1$ has radius $R$, $A$ has coordinates $(0,a)$, then $P$ has speed
+One choice would be to assume $\overline{PP^\prime}$ rotates about $A$ at a constant rate. But choosing $\omega = \omega_0 \sin \alpha$ (where $\omega_0$ is the rotation rate when $\overline{PP^\prime}$ is the diameter through $A$) gives a simpler speed function. With $R$ the radius of ${\cal C}_1$ and $(0,a)$ the coordinates of $A$, $P$ has speed
 \begin{align*}
    v_P &= \omega_0 \rho \\
           &= \omega_0  \sqrt{R^2 + a^2 + 2aR\cos\theta} 
