--- a/PendulumPoncelet/PendulumPoncelet2.tex
+++ b/PendulumPoncelet/PendulumPoncelet2.tex
@@ -380,7 +380,7 @@ where $\Delta PP^\prime P^{\prime\prime}$ is circumscribed about ${\cal C}_1$ in
 *************************************************************************************************
 \fi
 
-In the general case when ${\cal C}_1$ is non-degenerate and without knowing whether a particular path $P_0 P_1 \ldots$ closes or not, the only possible choice for a continuous equal-time motion would be
+In the general case, if we knew \emph{apriori} that one path of tangent chords closed, we would be free to choose a (contiuous) speed function along the shorter arc between two adjacent vertices of the polygonal path. But allowing for the possibilty that one path never closes (and the points $P_0, P_1, \ldots$ forming a dense subset of ${\cal C}_1$), the only possible choice for a continuous equal-time motion would be
 \begin{equation}
     v_P =  v_P(\phi) = \omega_0 \rho(\phi)   \label{Eq:EqualTime8}
 \end{equation}
